resource_vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "172.31.0.0/16"
}

resource "aws_subnet" "main" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "172.31.0.0/16"
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "main" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.main.id
}


resource "aws_eip" "center" {
  vpc                       = true
  depends_on                = [ aws_internet_gateway.main ]
  network_interface         = aws_network_interface.center.id
  associate_with_private_ip = "172.31.1.1"
}

resource "aws_eip" "pd" {
  vpc                       = true
  depends_on                = [ aws_internet_gateway.main ]
  network_interface         = aws_network_interface.pd.id
  associate_with_private_ip = "172.31.8.1"
}


resource "aws_security_group" "ssh" {
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }
  name_prefix = "intra-and-ssh-"
  vpc_id = aws_vpc.main.id
}

resource "aws_security_group" "etcd" {
  ingress {
    from_port   = 2379
    to_port     = 2379
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  name_prefix = "etcd-"
  vpc_id = aws_vpc.main.id
}

resource "aws_security_group" "grafana" {
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  name_prefix = "grafana-"
  vpc_id = aws_vpc.main.id
}
